<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="50dp"
        android:background="#46000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_suggestion_login"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#FFFFFFFF"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#999999"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="10dip"
            android:padding="5dip"
            android:inputType="textPersonName"
            android:hint="@string/label_field_username_login"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#FFFFFFFF"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#999999"
            android:textSize="10dip"
            android:padding="5dip"
            android:inputType="textPersonName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/label_field_password_login"
            android:ems="10"
            android:id="@+id/editPassword"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/label_submit_login_login"
            android:id="@+id/buttonSubmitLogin"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>
